<resources>
    <!--    <string name="app_name">POSKepulID</string>-->
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="masuk">MASUK</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar">DAFTAR</string>
    <string name="login">LOGIN</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="syarat">Saya setuju dengan syarat dan ketentuan serta kebijakna privasi aplikasi</string>
    <string name="repassword">Ulangi kata sandi</string>
    <string name="ulang">Tidak menerima kode verifikasi?</string>
    <string name="kirim_ulang">KIRIM ULANG</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="kode_verifikasi">Masukan kode verifikiasi yang dikirimkan via email</string>
</resources>