<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_login"
            android:scaleType="centerCrop"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_50sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_50sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"/>

            <View
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/blue"
                android:layout_marginTop="@dimen/_2sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:hintTextColor="@color/blue"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="@dimen/_8ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextColor="@color/blue"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_8ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextColor="@color/blue"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/repassword"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_8ssp" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/syarat" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegist"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/blue"
                android:text="@string/masuk"
                android:textSize="@dimen/_6ssp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20sdp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sudah_memiliki_akun"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8ssp"/>

                <TextView
                    android:id="@+id/tvMasuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masuk"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_8ssp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>