<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VerifikasiOTPActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_login"
            android:scaleType="centerCrop"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_50sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_50sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VERIFIKASI"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"/>

            <View
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/blue"
                android:layout_marginTop="@dimen/_2sdp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:textColor="@color/black"
                android:text="@string/kode_verifikasi"
                android:textSize="@dimen/_8ssp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp">


                <EditText
                    android:id="@+id/code_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="number"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/poppins_regular"
                    android:maxLength="1"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/code_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/code_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="number"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/poppins_regular"
                    android:maxLength="1"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/code_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/poppins_regular"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:backgroundTint="@color/blue"
                android:text="@string/lanjutkan"
                android:textSize="@dimen/_6ssp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ulang"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8ssp"/>

                <TextView
                    android:id="@+id/tvReplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kirim_ulang"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_8ssp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>